@@ -10,5 +10,7 @@ v0.3	7	Write a white paper   	  	    			open	yeye	doc
 v0.3	8	Write some HTML to provide a decent website		open	yeye	doc
 v0.3	9	Create a mailing list	     	    			open	yeye
 v0.3	10	New option "prefix" for enum/union constructors		open	yeye	preprocessor,enhancement
-v0.3	11	Allow for more flexible enum patterns			open	yeye	preprocessor,enhancement
+v0.3	11	Allow for more flexible enum patterns			closed	yeye	preprocessor,enhancement
 v0.3	12	Allow direct access to fields in dump functions		open	yeye	preprocessor,bug
+
+-	13	Allow for non-constant constructors in enum		open	yeye	preprocessor,enhancement
